feat(revision): redesigned version and designed revision concept with use cases